<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/root_window">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:textSize="37sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_in_name" />
    </LinearLayout>
    <TextView
        android:id="@+id/text_down"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textSize="12sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_down" />
    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="1"
        android:layout_above="@id/text_down"
        android:layout_margin="15dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/signin_button"
            android:layout_width="371dp"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:layout_margin="5dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/signin_bottom"
            android:layout_weight="1"
            android:text="@string/signin_bottom"
            />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/student"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>
</RelativeLayout>